# MCP-PROJECT

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: organize_drive.py
src/drive_mcp/: __init__.py  __main__.py  auth.py  drive.py  server.py
