[project]
name = "drive-mcp"
version = "0.1.0"
description = "MCP server para gestionar documentos en Google Drive"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0,<2",
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
drive-mcp = "drive_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drive_mcp"]
